Added work experience

--- a/work-exp.html
+++ b/work-exp.html
@@ -12,7 +12,7 @@
 <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
 
-<title>Ronny - One page HTML Template</title> 
+<title>Ronny - Portfolio</title> 
 
 <!-- Styles -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
           <a href="index.html#page3">About</a>
         </li>
         <li  data-menuanchor="page4">
-          <a href="index.html#page4">Experience</a>
+          <a href="index.html#page4">Experience / Projects</a>
         </li>
         <li  data-menuanchor="page5">
           <a href="index.html#page5">Contact</a>
@@ -75,7 +75,7 @@
       <div class="contacts d-none d-md-block">
        
         <div class="contact-item">
-          <a href="mailto:contact@Ronny.com">ronny.icne@gmail.com</a>
+          <a href="mailto:contact@Ronny.com">Contact: ronny.icne@gmail.com</a>
         </div>
       </div>
     </header>
@@ -84,47 +84,57 @@
       <div class="container">
         <div class="row row-project">
           <div class="col-project-name col-md-6  mt-5 mb-5 mb-md-0">
-            <h1>Brole Mobile App</h1>
+            <h1>Jetsweat</h1>
+            <a href="https://www.jetsweatfitness.com/" target="_blank" class="underline">https://www.jetsweatfitness.com/</a>
+
             <div class="social-list social-list-detail">
-              <a href="" class="icon ion-social-twitter"></a>
-              <a href="" class="icon ion-social-facebook"></a>
-              <a href="" class="icon ion-social-googleplus"></a>
-              <a href="" class="icon ion-social-linkedin"></a>
-              <a href="" class="icon ion-social-dribbble-outline"></a>
+              <a href="https://twitter.com/jetsweatfitness?lang=en" class="icon ion-social-twitter"></a>
+              <a href="https://www.facebook.com/jetsweatfitness/" class="icon ion-social-facebook"></a>
+              <a href="https://www.linkedin.com/company/jetsweat/mycompany/" class="icon ion-social-linkedin"></a>
             </div>
           </div>
           <div class="col-project-info col-md-6">
             <div class="row">
               <div class="col-md-6 mt-5">
-                <h5>Client</h5>
-                <p>California Art Gallery Museum</p>
+                <h5>Position</h5>
+                <p>Software Developer</p>
               </div>
               <div class="col-md-6 mt-5">
-                <h5>Team</h5>
-                <p>Dustin Mahone - iOS Developer<br>
-                   Paul tf - Designer
-                </p>
-              </div>
-              <div class="col-md-6 mt-5">
-                <h5>Services</h5>
-                <p>Branding, UI/UX Design,<br>Mobile Design</p>
+                <h5>Technologies</h5>
+                <p>Frontend: React, Redux, D3.js, Jquery, SASS, CSS</p>
+                <br/>
+                <p>Backend: Node, Sails.js</p>
+                <br />
+                DB: MySQL
               </div>
               <div class="col-md-6 mt-5">
                 <h5>Date</h5>
-                <p>Feburary 25th, 2019</p>
+                <p>January 2021</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <img alt="" class="image-holder wow fadeIn" src="images/bg/project3.jpg">
+      <img alt="" class="image-holder wow fadeIn" src="images/bg/jetsweat-1.png">
       <div class="container">
-        <p class="project-detail-text text-center">Brole is a startup that aims to supply energy (starting with gas) to domestic household across the UK. Create a very simple yet stunning logotype and promo site that sets the brand of Entice Energy apart from the competitors like a fresh take on an already saturated area. <a href="https://example.domain/denima6vsco" target="_blank" class="underline">https://example.domain/denima6vsco</a>
+        <p class="project-detail-text text-center">JETSWEAT is a video streaming fitness platform that provides exclusive access to top boutique studio classes, personalized programming, live-classes via two-way streaming, and real-time performance tracking. Our mission is to empower an active lifestyle by providing real boutique fitness classes on a convenient and accessible platform available wherever, whenever. We power the digital transformations for fitness studios across the globe with the technological infrastructure to be able to engage their members in real-time from all over the world.
+
+          Featured in Wall Street Journal, LA Times, NY Post, ABC News, WWD, Shape and Men’s Journal, we offer a leading streaming fitness B2B SaaS platform as well as a B2C marketplace platform. 
+          <br />
         </p>
-        <img alt="" class="image-holder wow fadeInLeft" src="images/bg/project3-1.jpg">
-        <img alt="" class="image-holder wow fadeInRight" src="images/bg/project3-2.jpg">
-        <p class="project-detail-text text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quaerat harum, tempora quia molestiae repudiandae ex eaque dolorem porro necessitatibus totam voluptas placeat voluptates nemo amet aliquid impedit vel? Asperiores?
-        </p>
+        <img alt="" class="image-holder wow fadeInLeft" src="images/bg/jetsweat-2.png">
+        <img alt="" class="image-holder wow fadeInRight" src="images/bg/jetsweat-3.png">
+        <h1>Details</h1>
+        <ul>
+          <li>	Optimized the site’s load time by 15% by deprecating unused third-party libraries, optimizing images, removing unused React and CSS code.</li>
+          <li>Create, redesign, and refactor numerous React components for performance optimization across a vast array of web-capable devices and browsers.</li>
+          <li>Implement Redux with Redux-Saga middleware to handle predictable asynchronous code.</li>
+          <li>Implement Redux with Redux-Saga middleware to handle predictable asynchronous code.</li>
+          <li>Fix back-end features built in Node.js to correctly display and organize user data for 30+ active fitness studios.</li>
+          <li>Responsible for API design and development of RESTful Services using Node.js to fetch data from the RDS-SQL server to display in multiple tables using Datatables.net. </li>
+          <li>Create custom data visualization charts using D3.js to display customer views, purchases, and classes.</li>
+        </ul>
+        <br/>
        </div>
       </div>
     </div>
