edited index.html and commented out unused linearicons.css

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="intro">
                       <div class="row">
                         <div class="col-md-12 col-lg-12">
-                          <h1 class="display-2 text-white  wow fadeIn text-center" data-wow-delay="0.1s"><span class="text-primary">Hey,</span> I'm Ronny. I design & build user interfaces.</h1>
+                          <h1 class="display-2 text-white  wow fadeIn" data-wow-delay="0.1s"><span class="text-primary">Hey,</span> I'm Ronny. I design & build user interfaces.</h1>
                         </div>
                       </div>
                     </div>
@@ -151,7 +151,7 @@
       
       <div data-anchor="page4" class="pp-scrollable section section-4">
         <div class="scroll-wrap">
-          <div class="section-bg bg-about" style="background-image:url(images/bg/bg-1.jpg);"></div>
+          <div class="section-bg bg-about"></div>
           <div class="scrollable-content">
             <div class="vertical-title text-white  d-none d-lg-block"><span>about us</span></div>
             <div class="vertical-centred">
@@ -189,10 +189,10 @@
       <div data-anchor="page5" class="pp-scrollable text-white section section-5">
         <div class="scroll-wrap">
           <div class="bg-changer">
-            <div class="section-bg" style="background-image:url(images/bg/bg-exp.jpg);"></div>
-            <div class="section-bg" style="background-image:url(images/bg/bg-exp.jpg);"></div>
-            <div class="section-bg" style="background-image:url(images/bg/bg-exp.jpg);"></div>
-            <div class="section-bg" style="background-image:url(images/bg/bg-exp.jpg);"></div>
+            <div class="section-bg" ></div>
+            <div class="section-bg" ></div>
+            <div class="section-bg" ></div>
+            <div class="section-bg" ></div>
           </div>
           <div class="scrollable-content">
             <div class="vertical-title  d-none d-lg-block"><span>my works</span></div>
@@ -252,7 +252,7 @@
      
       <div data-anchor="page8" class="pp-scrollable section section-8">
         <div class="scroll-wrap">
-          <div class="section-bg" style="background-image:url(images/bg/bg-mail.jpg);"></div>
+          <div class="section-bg" ></div>
           <div class="scrollable-content">
             <div class="vertical-title text-white d-none d-lg-block"><span>contact</span></div>
             <div class="vertical-centred">
