--- a/wordpress.html
+++ b/wordpress.html
@@ -84,7 +84,7 @@
 
       <header class="navbar navbar-fullpage boxed">
         <div class="navbar-bg"></div>
-        <a class="brand" href="#">
+        <a class="brand" href="index.html#page1">
           <img alt="" src="images/brand.png" />
           <div class="brand-info">
             <div class="brand-name">Ronny Gutierrez</div>
