--- a/work-exp.html
+++ b/work-exp.html
@@ -1,6 +1,32 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-39THPMDMPD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-39THPMDMPD');
+</script>
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '184360127098949');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=184360127098949&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
@@ -59,7 +85,7 @@
 
     <header class="navbar navbar-fullpage boxed">
       <div class="navbar-bg"></div>
-      <a class="brand" href="#">
+      <a class="brand" data-menuanchor="page1" href="index.html#page1">
         <img alt="" src="images/brand.png">
         <div class="brand-info">
           <div class="brand-name">Ronny Gutierrez</div>
@@ -126,7 +152,7 @@
         <img alt="" class="image-holder wow fadeInRight" src="images/bg/jetsweat-3.png">
         <h1>Details</h1>
         <ul>
-          <li>	Optimized the site’s load time by 15% by deprecating unused third-party libraries, optimizing images, removing unused React and CSS code.</li>
+          <li>	Optimized the site's load time by 15% by deprecating unused third-party libraries, optimizing images, removing unused React and CSS code.</li>
           <li>Create, redesign, and refactor numerous React components for performance optimization across a vast array of web-capable devices and browsers.</li>
           <li>Implement Redux with Redux-Saga middleware to handle predictable asynchronous code.</li>
           <li>Implement Redux with Redux-Saga middleware to handle predictable asynchronous code.</li>
